# tse-eleicoes

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements-dev.txt  tse_client.py
.github/workflows/: tests.yml
references/: ckan-api.md  divulgacandcontas-api.md
scripts/: example_usage.py
tests/: test_tse_client.py
